[metadata]
description-file = README.md


[flake8]
ignore =
    E203,  # space before : (needed for how black formats slicing)
    E501,  # line too long
    E731,  # do not assign a lambda expression, use a def
    W503,  # line break before binary operator
max-line-length = 88
exclude = 
    .env,
    .git,
    .eggs,
    __pycache__,
    build,
    dist,
    venv,
    __init__.py

[mypy]
python_version = 3.6
ignore_missing_imports = True
# disallow_untyped_defs = True

# https://black.readthedocs.io/en/stable/compatible_configs.html
[isort]
#profile=black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326